src/components/Header/styles.scss
@use '../../styles/mixin';
@use '../../styles/vars';


/*==================== HEADER ========================*/

.header {
  background-color: vars.$main-primary-color;
  color: #fff;
  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
  width: 100vw;
  height: 4rem;
  position: fixed;
  top: 0;
  z-index: 100;

/*==================== LOGO ========================*/
  &__logo{
  height: 4rem;
  z-index: 100;
  position: fixed;
  top: 1.25rem;
  left: 10px;
  font-size: 1.5rem;
  color:#fff;
  }

/*==================== NAVBAR ========================*/
  &__nav{
    position: fixed;
    width: 100%;
    height: 4rem;

    //NAVBAR liste des élements de navigation <li>
    &-list {
      display: flex;
      flex-direction: column;
      height: auto;
      background-color: vars.$main-primary-color;

      @include mixin.breakpoint(desktop) {
        height: 100%;
        flex-direction: row;
        justify-content: center;
        align-items: center;   
      }
      
      //NAVBAR élements de navigation <li>
      &__items {
        font-size: 1.25rem;
        text-transform: uppercase;
        width: 100%;
        border-top: 1px solid rgba(255, 255, 255, 0.555);
        text-align: center;
        margin-right: 0px;
        padding: 20px 0;
        transition: 0.5s;         
        @include mixin.breakpoint(desktop) {
          width: auto;
          padding: 10px;  
          margin-right: 1.25rem;
          border-top:none;
          border-radius: 3px;
        }
    }

      // 1er élément <li>
      &__items:nth-child(1){
        margin-top: 4rem;
        @include mixin.breakpoint(desktop) {
          margin-top: 0; 
        }
      }

      // Liens des éléments <li>
      &__items-link{
        width: auto;
        padding: 7px;  
        border-radius: 3px;
        transition: 0.5s;
        &--active{
          background: rgba(255,255,255,0.15);
          backdrop-filter: blur(30px);
          box-shadow: 0 5px 5px rgba(0,0,0,0.2);  
          transition: 0.5s;        
        }
      }
      &__items-link:hover{
        background: rgba(255, 255, 255, 0.3);
        transition: 0.5s;
      }

      


    }

  /*==================== BOUTON TOOGLE: menu hamburger ========================*/
  // ICON du menu change avec le state toggleMenu
    &__toggle{
      display: block;
      position: absolute;
      right: 10px;
      top: 7px;
      outline: none;	
      border: none;
      background-color: vars.$main-primary-color;
      color: #fff;

      @include mixin.breakpoint(desktop) {
        display: none;
      }
    }   
  }

   /*==================== BOUTON LOGIN ========================*/
  &__login {
    display: block;
    position: absolute;
    font-family: 'Poppins', sans-serif;
    top: 0.6rem;
    right: 80px;
    outline: none;	
    border: none;
    border-radius: 20px;
    background-color: #003051;;
    z-index: 100;
    padding: 10px;
    font-size: 1rem;
    text-transform: uppercase;
    font-weight: 500;
    transition: 0.5s;
  }
  &__login:hover {
    background-color: #fc9100;
    transition: 0.5s;
  }

   /*==================== HEADER LINK ========================*/
  a{
    color:#fff;
  }
}

